--- a/2fullstack.yaml
+++ b/2fullstack.yaml
@@ -119,6 +119,11 @@ spec:
       containers:
       - name: php-app
         image: jjjxxx201/php-app:latest
+        resources:
+          requests:
+            cpu: "100m"
+          limits:
+            cpu: "500m"
         ports:
         - containerPort: 8080
         env:
