--- a/2fullstack.yaml
+++ b/2fullstack.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+  apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
@@ -116,6 +116,7 @@ spec:
       labels:
         app: php-app
     spec:
+      serviceAccountName: php-app-sa
       containers:
       - name: php-app
         image: jjjxxx201/php-app:latest
@@ -152,6 +153,16 @@ spec:
             secretKeyRef:
               name: mysql-secret
               key: DB_PORT
+        securityContext:
+          runAsUser: 1000
+          runAsGroup: 3000
+          fsGroup: 2000
+          runAsNonRoot: true
+          readOnlyRootFilesystem: true
+          capabilities:
+            drop: ["ALL"]
+
+
 
 ---
 
