--- a/k8s/NetworkPolicy.yaml
+++ b/k8s/NetworkPolicy.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: mysql-db
+      app: mysql
   ingress:
     - from:
         - namespaceSelector:
